<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.stepquest.ui.dashboard.DashboardFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_WeeklySteps"
            app:destination="@id/WeeklyStepsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_MonthlySteps"
            app:destination="@id/MonthlyStepsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.stepquest.ui.dailysteps.DailyStepsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/WeeklyStepsFragment"
        android:name="com.example.stepquest.ui.stepslist.StepsListFragment"
        android:label="@string/weekly_steps_label"
        tools:layout="@layout/fragment_steps_list">
        <argument
            android:name="mode"
            app:argType="string"
            android:defaultValue="weekly" />
    </fragment>
    <fragment
        android:id="@+id/MonthlyStepsFragment"
        android:name="com.example.stepquest.ui.stepslist.StepsListFragment"
        android:label="@string/monthly_steps_label"
        tools:layout="@layout/fragment_steps_list">
        <argument
            android:name="mode"
            app:argType="string"
            android:defaultValue="monthly" />
    </fragment>
</navigation>